--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,29 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".UserSettingsActivity">
+        </activity>
+        <activity android:name=".SignUpActivity">
+        </activity>
+        <activity android:name=".SignInActivity">
+        </activity>
+        <activity android:name=".EndGameActivity">
+        </activity>
+        <activity android:name=".GameActivity">
+        </activity>
+        <activity android:name=".BeginGameActivity">
+        </activity>
+        <activity android:name=".JoinActivity">
+        </activity>
+        <activity android:name=".LobbyActivity">
+        </activity>
+        <activity android:name=".CreateActivity">
+        </activity>
+        <activity android:name=".HomeActivity">
+        </activity>
+        <activity android:name=".LoginActivity">
+        </activity>
+        <activity android:name=".LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
