--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,13 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
+
             android:allowBackup="true"
             android:icon="@drawable/loup_garou"
             android:label="Loup-Garou"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".UserSettingsActivity">
         </activity>
         <activity android:name=".SignUpActivity">
