--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
 
             android:allowBackup="true"
-            android:icon="@drawable/loup_garou"
+            android:icon="@drawable/loup_garou_launcher"
             android:label="Loup-Garou"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
