--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,53 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="fr.isen.cata.werewolfapp">
+
     <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
-
             android:allowBackup="true"
             android:icon="@drawable/loup_garou_launcher"
             android:label="Loup-Garou"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".UserSettingsActivity"
-                  android:screenOrientation="portrait">
+        <activity android:name=".TutoActivity">
+
         </activity>
-        <activity android:name=".SignUpActivity"
-                  android:screenOrientation="portrait">
+        <activity
+                android:name=".UserSettingsActivity"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".SignInActivity"
-                  android:screenOrientation="portrait">
+        <activity
+                android:name=".SignUpActivity"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".GameActivity"
-                  android:screenOrientation="portrait">
+        <activity
+                android:name=".SignInActivity"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".JoinActivity"
-                  android:screenOrientation="portrait">
+        <activity
+                android:name=".GameActivity"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".LobbyActivity"
-                  android:screenOrientation="portrait">
+        <activity
+                android:name=".JoinActivity"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".CreateActivity"
-                  android:screenOrientation="portrait">
+        <activity
+                android:name=".LobbyActivity"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".LauncherActivity"
-                  android:screenOrientation="portrait">
+        <activity
+                android:name=".CreateActivity"
+                android:screenOrientation="portrait">
+        </activity>
+        <activity
+                android:name=".LauncherActivity"
+                android:screenOrientation="portrait">
+
+
+        </activity>
+        <activity
+                android:name=".LoginActivity"
+                android:screenOrientation="portrait">
+        </activity>
+        <activity
+                android:name=".HomeActivity"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"
-                  android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".HomeActivity"
-                  android:screenOrientation="portrait">
-        </activity>
-
     </application>
 
 </manifest>
