tuto rotate lock

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".TutoActivity">
-
+        <activity android:name=".TutoActivity"
+            android:screenOrientation="portrait">
         </activity>
         <activity
                 android:name=".UserSettingsActivity"
