--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,10 @@
                 android:screenOrientation="portrait">
         </activity>
         <activity
+                android:name=".GameActivityTest"
+                android:screenOrientation="portrait">
+        </activity>
+        <activity
                 android:name=".LoginActivity"
                 android:screenOrientation="portrait">
         </activity>
